--- a/drivers/pci/Kconfig
+++ b/drivers/pci/Kconfig
@@ -143,6 +143,18 @@ config PCI_PHYTIUM
 	  Say Y here if you want to enable PCIe controller support on
 	  Phytium SoCs.
 
+config PCIE_DW_IMX
+	bool "Enable NXP i.MX8M PCIe driver (DesignWare core)"
+	depends on ARCH_IMX8M
+	depends on IMX8M_POWER_DOMAIN
+	select SYSCON
+	select REGMAP
+	select PCIE_DW_COMMON
+	help
+	  Say Y here if you want to enable PCIe controller support on
+	  i.MX8M SoCs. The PCIe controller on i.MX8M is based on
+	  DesignWare hardware.
+
 config PCIE_DW_MVEBU
 	bool "Enable Armada-8K PCIe driver (DesignWare core)"
 	depends on ARMADA_8K
