board: mntre: imx8mq: initialize LCD

--- a/board/mntre/imx8mq_reform2/Makefile
+++ b/board/mntre/imx8mq_reform2/Makefile
@@ -10,3 +10,7 @@ ifdef CONFIG_SPL_BUILD
 obj-y += spl.o
 obj-$(CONFIG_IMX8M_LPDDR4) += lpddr4_timing.o
 endif
+
+ifndef CONFIG_SPL_BUILD
+obj-y += lcdif.o
+endif
