ARM: dts: at91: sam9x60-curiosity: Improve alignment with upstream
- nodes moved
- using node references by label instead of dulicating the node tree

Makes it easier to compare with the dts file from Linux kernel.

Signed-off-by: Alexander Dahl <ada@thorsis.com>

--- a/arch/arm/dts/at91-sam9x60_curiosity-u-boot.dtsi
+++ b/arch/arm/dts/at91-sam9x60_curiosity-u-boot.dtsi
@@ -14,10 +14,6 @@
 
 		apb {
 			bootph-all;
-
-			pinctrl {
-				bootph-all;
-			};
 		};
 	};
 
@@ -39,6 +35,10 @@
 };
 
 &main_xtal {
+	bootph-all;
+};
+
+&pinctrl {
 	bootph-all;
 };
 
