--- a/arch/arm/dts/at91-sam9x60_curiosity.dts
+++ b/arch/arm/dts/at91-sam9x60_curiosity.dts
@@ -11,58 +11,16 @@
 #include "sam9x60.dtsi"
 
 / {
-	model = "Microchip SAM9X60 CURIOSITY";
+	model = "Microchip SAM9X60 Curiosity";
 	compatible = "microchip,sam9x60-curiosity", "microchip,sam9x60", "atmel,at91sam9";
-
-	ahb {
-		apb {
-			flx0: flexcom@f801c600 {
-				atmel,flexcom-mode = <ATMEL_FLEXCOM_MODE_TWI>;
-				status = "okay";
-
-				i2c@600 {
-					compatible = "microchip,sam9x60-i2c";
-					reg = <0x600 0x200>;
-					pinctrl-names = "default";
-					pinctrl-0 = <&pinctrl_flx0>;
-					#address-cells = <1>;
-					#size-cells = <0>;
-					clocks = <&pmc PMC_TYPE_PERIPHERAL 5>;
-					status = "okay";
-
-					eeprom@53 {
-						compatible = "atmel,24c02";
-						reg = <0x53>;
-						pagesize = <16>;
-					};
-				};
-			};
-
-			pinctrl {
-					pinctrl_flx0: flx0_default {
-						atmel,pins =
-							<AT91_PIOA 0 AT91_PERIPH_A AT91_PINCTRL_NONE
-							 AT91_PIOA 1 AT91_PERIPH_A AT91_PINCTRL_NONE>;
-					};
-
-					pinctrl_onewire_tm_default: onewire_tm_default {
-						atmel,pins =
-							<AT91_PIOD 14 AT91_PERIPH_GPIO AT91_PINCTRL_PULL_UP>;
-					};
-
-					usb1 {
-						pinctrl_usb_default: usb_default {
-							atmel,pins = <AT91_PIOD 15 AT91_PERIPH_GPIO AT91_PINCTRL_NONE
-									AT91_PIOD 18 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>;
-						};
-					};
-			};
-		};
-	};
 
 	chosen {
 		stdout-path = &dbgu;
 		i2c0 = &flx0;
+	};
+
+	memory {
+		reg = <0x20000000 0x8000000>;
 	};
 
 	clocks {
@@ -73,10 +31,6 @@
 		main_xtal: main_xtal {
 			clock-frequency = <24000000>;
 		};
-	};
-
-	memory {
-		reg = <0x20000000 0x8000000>;
 	};
 
 	onewire_tm: onewire {
@@ -92,9 +46,53 @@
 	};
 };
 
+&flx0 {
+	atmel,flexcom-mode = <ATMEL_FLEXCOM_MODE_TWI>;
+	status = "okay";
+
+	i2c@600 {
+		compatible = "microchip,sam9x60-i2c";
+		reg = <0x600 0x200>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_flx0>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+		clocks = <&pmc PMC_TYPE_PERIPHERAL 5>;
+		status = "okay";
+
+		eeprom@53 {
+			compatible = "atmel,24c02";
+			reg = <0x53>;
+			pagesize = <16>;
+		};
+	};
+};
+
 &macb0 {
 	phy-mode = "rmii";
 	status = "okay";
+};
+
+&pinctrl {
+	flexcom {
+		pinctrl_flx0: flx0_default {
+			atmel,pins =
+				<AT91_PIOA 0 AT91_PERIPH_A AT91_PINCTRL_NONE
+				 AT91_PIOA 1 AT91_PERIPH_A AT91_PINCTRL_NONE>;
+		};
+	};
+
+	pinctrl_onewire_tm_default: onewire_tm_default {
+		atmel,pins =
+			<AT91_PIOD 14 AT91_PERIPH_GPIO AT91_PINCTRL_PULL_UP>;
+	};
+
+	usb1 {
+		pinctrl_usb_default: usb_default {
+			atmel,pins = <AT91_PIOD 15 AT91_PERIPH_GPIO AT91_PINCTRL_NONE
+				      AT91_PIOD 18 AT91_PERIPH_GPIO AT91_PINCTRL_NONE>;
+		};
+	};
 };
 
 &usb1 {
