sandbox: capsule: Allow EFI capsule generation as part of the build
The EFI capsule files can now be generated as part of u-boot
build. This is done through binman. Add capsule entry nodes in the
u-boot.dtsi for the sandbox architecture for generating the
capsules. Remove the corresponding generation of capsules from the
capsule update conftest file.

Also generate the FIT image used for testing the capsule update
feature on the sandbox_flattree variant through binman. Remove the now
superfluous its file which was used for generating this FIT image.

The capsules are generated as part of the build when the
CONFIG_EFI_GENERATE_CAPSULES symbol is enabled. Enable this symbol in
the CI run for sandbox and sandbox_flattree variants.

Signed-off-by: Sughosh Ganu <sughosh.ganu@linaro.org>

--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -254,6 +254,7 @@ stages:
       matrix:
         sandbox:
           TEST_PY_BD: "sandbox"
+          OVERRIDE: "-a CONFIG_EFI_GENERATE_CAPSULES=y"
         sandbox_clang:
           TEST_PY_BD: "sandbox"
           OVERRIDE: "-O clang-16"
@@ -271,6 +272,7 @@ stages:
           TEST_PY_TEST_SPEC: "test_ofplatdata or test_handoff or test_spl"
         sandbox_flattree:
           TEST_PY_BD: "sandbox_flattree"
+          OVERRIDE: "-a CONFIG_EFI_GENERATE_CAPSULES=y"
         sandbox_trace:
           TEST_PY_BD: "sandbox"
           BUILD_ENV: "FTRACE=1 NO_LTO=1"
