ti: keystone2: Imply NFS command support
TI KS2 boards have the nfs command in their common environment boot
configuration, enable this command.

Signed-off-by: Andrew Davis <afd@ti.com>
Reviewed-by: Tom Rini <trini@konsulko.com>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -792,6 +792,7 @@ config ARCH_KEYSTONE
 	select SYS_ARCH_TIMER
 	select SYS_THUMB_BUILD
 	imply CMD_MTDPARTS
+	imply CMD_NFS
 	imply CMD_SAVES
 	imply FIT
 
