--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -785,16 +785,21 @@ config ARCH_IPQ40XX
 
 config ARCH_KEYSTONE
 	bool "TI Keystone"
+	select CMD_DDR3
 	select CMD_POWEROFF
 	select CPU_V7A
 	select DDR_SPD
+	select SPL_BOARD_INIT if SPL
 	select SUPPORT_SPL
 	select SYS_ARCH_TIMER
 	select SYS_THUMB_BUILD
 	imply CMD_MTDPARTS
 	imply CMD_NFS
 	imply CMD_SAVES
+	imply DM_I2C
 	imply FIT
+	imply SOC_TI
+	imply TI_KEYSTONE_SERDES
 
 config ARCH_K3
 	bool "Texas Instruments' K3 Architecture"
