--- a/tools/Kconfig
+++ b/tools/Kconfig
@@ -91,10 +91,10 @@ config TOOLS_SHA512
 	  Enable SHA512 support in the tools builds
 
 config TOOLS_MKEFICAPSULE
-	bool "Build efimkcapsule command"
-	default y if EFI_CAPSULE_ON_DISK
+	bool "Build mkeficapsule tool"
+	default y if EFI_CAPSULE_ON_DISK || SANDBOX
 	help
-	  This command allows users to create a UEFI capsule file and,
+	  This tool allows users to create a UEFI capsule file and,
 	  optionally sign that file. If you want to enable UEFI capsule
 	  update feature on your target, you certainly need this.
 
